<resources>
    <string name="app_name">Vodio</string>

    <string name="title_activity_home">HomeActivity</string>

    <string name="online_mode_string">Mode en ligne</string>
    <string name="offline_mode_string">Mode en ligne</string>

    <string name="database_url">http://www.assimsen.fr/vodio/rest/</string>

    <!-- ACTU FRAGMENT -->
    <string name="search_hint">Rechercher</string>

    <!-- MENU BOTTOM NAVBAR -->
    <string name="bedroom_name">Chambre</string>
    <string name="salon_name">Salon</string>
    <string name="profile_name">Profil</string>
    <string name="actu_name">Actualité</string>
    <string name="settings_name">Paramètres</string>
    <string name="search_name">Recherche</string>

    <!-- LOGIN FRAGMENT -->
    <string name="email_field_hint">Email</string>
    <string name="password_field_hint">Mot de passe</string>
    <string name="sign_in_button_text">Se connecter</string>
    <string name="forgot_password_button_text">Mot de passe oublié?</string>
    <string name="sign_up_button_text">S\'inscrire</string>


    <!-- DATABASE STRINGS -->
    <string name="host_database">http://www.assimsen.fr/vodio/rest</string>

    <!-- DATATION STRINGS -->
    <string name="hour_single">heure</string>
    <string name="min_single">minute</string>
    <string name="day_single">jour</string>
    <string name="second_single">seconde</string>

    <string name="hour_p">heures</string>
    <string name="min_p">minutes</string>
    <string name="day_p">jours</string>
    <string name="second_p">secondes</string>

    <!-- ACTIONS STRINGS -->
    <string name="follow">Suivre</string>
    <string name="unfollow">Ne plus suivre</string>

    <string name="followed">suivi</string>
    <string name="following_you">vous suit</string>
    <plurals name="nb_vodi">
        <item quantity="zero">%d voditeur</item>
        <item quantity="one">%d voditeur</item>
        <item quantity="other">%d voditeurs</item>
    </plurals>
    <plurals name="nb_vode">
        <item quantity="zero">%d vodeur</item>
        <item quantity="one">%d vodeur</item>
        <item quantity="other">%d vodeurs</item>
    </plurals>

    <string name="signal_vod">Signaler</string>
    <string name="share_vod">Partager</string>
    <string name="edit">Modifier</string>
    <string name="retry">Recommencer</string>
    <string name="send">Envoyer</string>
    <string name="comment">Commenter</string>

    <string name="there_is_time">Il y a %d %s</string>

    <string name="you_have_no_vod">Vous n\'avez pas de vod(s)</string>
    <string name="profile_have_no_vod">L\'utilisateur n\'a pas de vod(s)</string>

    <string name="loading_dot">Chargement...</string>

    <plurals name="number_of_seconds">
        <item quantity="one">seconde</item>
        <item quantity="few">secondes</item>
        <item quantity="other">secondes</item>
    </plurals>

    <plurals name="number_of_minutes">
        <item quantity="one">minute</item>
        <item quantity="few">minutes</item>
        <item quantity="other">minutes</item>
    </plurals>

    <plurals name="number_of_hours">
        <item quantity="one">heure</item>
        <item quantity="few">heures</item>
        <item quantity="other">heures</item>
    </plurals>

    <plurals name="number_of_days">
        <item quantity="one">jour</item>
        <item quantity="few">jours</item>
        <item quantity="other">jours</item>
    </plurals>

    <plurals name="number_of_weeks">
        <item quantity="one">semaine</item>
        <item quantity="few">semaines</item>
        <item quantity="other">semaines</item>
    </plurals>

    <plurals name="number_of_months">
        <item quantity="one">mois</item>
        <item quantity="few">mois</item>
        <item quantity="other">mois</item>
    </plurals>

    <plurals name="number_of_years">
        <item quantity="one">année</item>
        <item quantity="few">années</item>
        <item quantity="other">années</item>
    </plurals>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
