<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".fragments.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:id="@+id/headerProfileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp">

        <ImageButton
            android:id="@+id/editProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@android:color/transparent"
            android:elevation="1dp"
            android:src="@android:drawable/ic_menu_edit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/white"
            android:gravity="center_horizontal"
            android:minHeight="150dp"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingTop="30dp">

            <TextView
                android:id="@+id/userCompleteNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/loadingUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/numberOfVoditeursTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/loadingVoditeur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/numberOfVodeursTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/loadingVodeur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/isFollowedTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/followed"
                android:visibility="gone" />

            <TextView
                android:id="@+id/isFollowingTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/following_you"
                android:visibility="gone" />

            <Button
                android:id="@+id/followProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/follow"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:visibility="gone"
        android:id="@+id/refreshProfileVodsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listViewVodsProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/noVodProvidedProfile"
        android:visibility="visible">
        <TextView
            android:layout_marginTop="50dp"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:id="@+id/NoVodProvidedTv"
            android:text="@string/you_have_no_vod"/>
        <ImageButton
            android:id="@+id/refreshWhenEmptyProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_popup_sync"
            android:backgroundTint="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/loadingVodsProfile">
        <TextView
            android:layout_marginTop="50dp"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/loading_dot"/>

        <ProgressBar
            android:id="@+id/progressBarVodActu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

</LinearLayout>